fix layout issues and finishing touches

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -207,6 +207,10 @@ hr{
   color: white;
 }
 
+.search-btn {
+  text-align: left;
+}
+
 #popup > section {
   background-color: #101b39;
   width: 30vw;
